# simple_fastapi

./: .gitignore  .pre-commit-config.yaml  DEV.md  LICENSE  README.md  data.json  main.py  pyproject.toml  requirements.txt  yo_mama.json
.do/: deploy.template.yaml
main/: app.py  helper.py
src/: __init__.py  helper.py  main.py
tests/: conftest.py  test_main.py
tests/functional/: test_api.py
tests/unit/: test_main.py
