[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["mrnobody <jesavius@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
gunicorn = "^20.0.4"
uvicorn = "^0.13.2"
pytest-pythonpath = "^0.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"
pytest-clarity = "^0.3.0-alpha.0"
prettyprinter = "^0.18.0"
Scrapy = "^2.4.1"
pre-commit = "^2.9.3"
requests = "^2.25.1"
httpx = "^0.16.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
